Update content src/site/notes/현재 추구하는 진로-삶에 대한 가치관-기록.md

--- a/src/site/notes/현재 추구하는 진로-삶에 대한 가치관-기록.md
+++ b/src/site/notes/현재 추구하는 진로-삶에 대한 가치관-기록.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"//","tags":["목표-끌어당김법칙-마인드셋팅","핸드폰","배포"],"noteIcon":""}
+{"dg-publish":true,"permalink":"//","noteIcon":""}
 ---
 
 
