Update content src/site/notes/현재 추구하는 진로-삶에 대한 가치관-기록.md

--- a/src/site/notes/현재 추구하는 진로-삶에 대한 가치관-기록.md
+++ b/src/site/notes/현재 추구하는 진로-삶에 대한 가치관-기록.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/현재 추구하는 진로-삶에 대한 가치관-기록/","noteIcon":""}
+{"dg-publish":true,"permalink":"//","noteIcon":""}
 ---
 
 
