Update 현재 추구하는 진로-삶에 대한 가치관-기록.md

--- a/src/site/notes/현재 추구하는 진로-삶에 대한 가치관-기록.md
+++ b/src/site/notes/현재 추구하는 진로-삶에 대한 가치관-기록.md
@@ -1,7 +1,6 @@
 ---
-{"dg-publish":true,"permalink":"/now 추구하는 진로-삶에 대한 가치관-기록/","noteIcon":""}
+{"dg-publish":true,"permalink":"/now-추구하는-진로-삶/","noteIcon":""}
 ---
-
 
 -------------------------------
 
