--- a/src/site/notes/distribute/Python 파이썬/Content record folder/시퀀스-컬렉션-타입.md
+++ b/src/site/notes/distribute/Python 파이썬/Content record folder/시퀀스-컬렉션-타입.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/distribute/python/content-record-folder//","tags":["파이썬"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/distribute/python/content-record-folder/시퀀스-컬렉션-타입/","tags":["파이썬"],"noteIcon":""}
 ---
 
 ### 날짜 2023-11-13 15:46
