--- a/src/site/notes/distribute/Python 파이썬/Content record folder/객체특징-얕은복사-깊은복사-메모리주소.md
+++ b/src/site/notes/distribute/Python 파이썬/Content record folder/객체특징-얕은복사-깊은복사-메모리주소.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/distribute/python/content-record-folder//","tags":["파이썬"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/distribute/python/content-record-folder/객체특징-얕은복사-깊은복사-메모리주소/","tags":["파이썬"],"noteIcon":""}
 ---
 
 ### 날짜 2023-11-13 14:48
