--- a/src/site/notes/distribute/productivity system-생산성 시스템/생산성 시스템.md
+++ b/src/site/notes/distribute/productivity system-생산성 시스템/생산성 시스템.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/distribute/productivity-system//","noteIcon":""}
+{"dg-publish":true,"permalink":"/distribute/productivity-system/생산성 시스템/","noteIcon":""}
 ---
 
 ### 날짜 2023-11-14 13:52
