Update content src/site/notes/distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차.md

--- a/src/site/notes/distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차.md
+++ b/src/site/notes/distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차.md
@@ -20,21 +20,21 @@
 
 ### ㅡ 1. 제텔카스텐 원칙에 따른 4단계 기록 프로세스
 	
-**"대략적 기록-임시메모"**
-	: 떠오르는 생각-아이디어를 툭툭 메모
-	: 다양한 곳에서 얻은 도움이 되는/필요한/영감을 주는 내용들을 툭툭 메모
-	: 빠르게 툭툭 기록을 하는 메모이기 떄문에 [[distribute/productivity system-생산성 시스템/Content record folder/노트 기록 시스템-추가내용#ㅡ 올바른 위치에 바로 저장.\|나중에 처리할 수 있도록 올바른 위치에 바로 저장.]]
-	: 일주일에 1번 "데일리 기록"을 보면서 생겨난 메모들을 확인하는 시간을 가진다.
-		: "리더" 프로그램/도구 이용.
-**"키워드-참고노트화"**
-	: 임시메모에서 생겨난 기록들을 키워드 요약한다.
-		: 해당 기록이 가지고 있는 [[distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차#ㅡ 3.\|핵심 키워드로 제목을 설정]]한다.
-**"밑줄-참고노트화"**
-	: 임시메모에서 생겨난 기록들을 밑줄치면서 요약한다.
-**"요약-영구노트화"**
-	: 참고노트화에서 생겨난 기록들을 간단한 문장들로 요약한다.
-		: 요약 시 내가 이애한 나만의 언어로 요약한다.
-	: 기존에 있던 영구메모들과 새롭게 생간 영구메모들간의 연관성이 있는지 확인하고 연결하는 시간을 가진다. > 이러한 연관성을 찾아 연결하는 과정도 배움이 된다.
+### **"대략적 기록-임시메모"**
+: 떠오르는 생각-아이디어를 툭툭 메모
+: 다양한 곳에서 얻은 도움이 되는/필요한/영감을 주는 내용들을 툭툭 메모
+: 빠르게 툭툭 기록을 하는 메모이기 떄문에 [[distribute/productivity system-생산성 시스템/Content record folder/노트 기록 시스템-추가내용#ㅡ 올바른 위치에 바로 저장.\|나중에 처리할 수 있도록 올바른 위치에 바로 저장.]]
+: 일주일에 1번 "데일리 기록"을 보면서 생겨난 메모들을 확인하는 시간을 가진다.
+	: "리더" 프로그램/도구 이용.
+### **"키워드-참고노트화"**
+: 임시메모에서 생겨난 기록들을 키워드 요약한다.
+	: 해당 기록이 가지고 있는 [[distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차#ㅡ 3.\|핵심 키워드로 제목을 설정]]한다.
+### **"밑줄-참고노트화"**
+: 임시메모에서 생겨난 기록들을 밑줄치면서 요약한다.
+### **"요약-영구노트화"**
+: 참고노트화에서 생겨난 기록들을 간단한 문장들로 요약한다.
+	: 요약 시 내가 이애한 나만의 언어로 요약한다.
+: 기존에 있던 영구메모들과 새롭게 생간 영구메모들간의 연관성이 있는지 확인하고 연결하는 시간을 가진다. > 이러한 연관성을 찾아 연결하는 과정도 배움이 된다.
 	
 위와 같은 단계를 거쳐 배운 내용을 기록-복습한다.
 	
