--- a/src/site/notes/distribute/productivity system-생산성 시스템/배움-회독 시스템-목차.md
+++ b/src/site/notes/distribute/productivity system-생산성 시스템/배움-회독 시스템-목차.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/distribute/productivity-system//","tags":["생산성/시스템","배포","목차"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/distribute/productivity-system/배움-회독 시스템-목차/","tags":["생산성/시스템","배포","목차"],"noteIcon":""}
 ---
 
 ### 날짜 2023-11-07 12:28
