Update 노트 기록 체계화 시스템-목차.md

--- a/src/site/notes/distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차.md
+++ b/src/site/notes/distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/distribute/productivity-system//","tags":["목차","배포","생산성/시스템"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/distribute/productivity-system/노트 기록 체계화 시스템-목차/","tags":["목차","배포","생산성/시스템"],"noteIcon":""}
 ---
 
 ### 날짜 2023-11-07 12:34
