--- a/src/site/notes/distribute/productivity system-생산성 시스템/배움-회독 시스템-목차.md
+++ b/src/site/notes/distribute/productivity system-생산성 시스템/배움-회독 시스템-목차.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/distribute/productivity-system/배움-회독 시스템-목차/","tags":["생산성/시스템","배포","목차"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/distribute/productivity-system//","tags":["생산성/시스템","배포","목차"],"noteIcon":""}
 ---
 
 ### 날짜 2023-11-07 12:28
@@ -25,8 +25,7 @@ ex) 책으로, [[distribute/productivity system-생산성 시스템/Content reco
 
 ### <1회독 : 대략적 정독 - 대략적 기록/임시노트 단계 > 
 
-ㅡ
-어떤 과목이던 1회독의 방향성은 "처음~끝까지 전체적인 내용을 빠르게 대략적으로 시청/정독/파악하는 것"
+ㅡ 어떤 과목이던 1회독의 방향성은 "처음~끝까지 전체적인 내용을 빠르게 대략적으로 시청/정독/파악하는 것"
 - 
 	여기서 대략적으로란?
 	해댱 내용을 깊게 이해하고 넘어가는게 아니라 알려주는 내용만/얕게만 이해하고 넘어간다. 
@@ -34,8 +33,7 @@ ex) 책으로, [[distribute/productivity system-생산성 시스템/Content reco
 전체적인 내용을 빠르게 1회독 정독이 끝났다면 해당 과목에 대한 <span style="background:rgba(240, 200, 0, 0.2)">대략적인 "목차-기록"</span>이 완성된 상태.
 
 
-ㅡ
-배우고 있는 내용을 내가 강사가 된 것처럼 
+ㅡ 배우고 있는 내용을 내가 강사가 된 것처럼 
 <span style="background:rgba(240, 200, 0, 0.2)">@ "100% 쉐도잉하면서/설명하면서 전체적인 내용을 쭉 정독"</span>
 <span style="background:rgba(240, 200, 0, 0.2)">@ "얕지만 배우고 있는 내용을 100% 이해하면서 전체적인 내용을 정독"</span>
 - 
@@ -60,14 +58,12 @@ ex) 책으로, [[distribute/productivity system-생산성 시스템/Content reco
 ### <2회독 : 복습 정독 - 복습 기록/참고노트화 단계 > 
 참고기록 : [[핵심목표-명확화리스트5#수정/기록/피드백 =>\|핵심목표-명확화리스트5#수정/기록/피드백 =>]]
 
-ㅡ
-1회독을 하면서 해당 과목에 대한 대략적인 "목차-기록"이 완성된 상태. > 2회독을 하면서 좀 더 <span style="background:rgba(240, 200, 0, 0.2)">@ 구체적인 "목차-기록"구축</span>해 나간다.
+ㅡ 1회독을 하면서 해당 과목에 대한 대략적인 "목차-기록"이 완성된 상태. > 2회독을 하면서 좀 더 <span style="background:rgba(240, 200, 0, 0.2)">@ 구체적인 "목차-기록"구축</span>해 나간다.
 	
 2회독을 진행하면서<span style="background:rgba(240, 200, 0, 0.2)"> @ 해당 과목에 대한 전체적인 흐름/프로세스/"목차-기록"을 암기</span>한다.
 
 
-ㅡ
-배우고 있는 내용을 내가 강사가 된 것처럼 
+ㅡ 배우고 있는 내용을 내가 강사가 된 것처럼 
 <span style="background:rgba(240, 200, 0, 0.2)">@ "100% 쉐도잉하면서/설명하면서 전체적인 내용을 쭉 정독"</span>
 <span style="background:rgba(240, 200, 0, 0.2)">@ "얕지만 배우고 있는 내용을 100% 이해하면서 전체적인 내용을 정독"</span>
 - 
@@ -81,8 +77,7 @@ ex) 책으로, [[distribute/productivity system-생산성 시스템/Content reco
 	모든 강의 내용을 기록을 할 필요는 없다.
 
 
-ㅡ
-2회독이 끝날 떄 까지는 [[distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차#ㅡ 1. 제텔카스텐 원칙에 따른 4단계 기록 프로세스\|노트 기록 체계화 시스템-목차#ㅡ 1. 제텔카스텐 원칙에 따른 4단계 기록 프로세스]] "요약-영구노트화"는 진행하지 않는다.
+ㅡ 2회독이 끝날 떄 까지는 [[distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차#ㅡ 1. 제텔카스텐 원칙에 따른 4단계 기록 프로세스\|노트 기록 체계화 시스템-목차#ㅡ 1. 제텔카스텐 원칙에 따른 4단계 기록 프로세스]] "요약-영구노트화"는 진행하지 않는다.
 - 
 	<span style="background:rgba(240, 200, 0, 0.2)">@ "밑줄-참고노트화"까지만 진행</span>한다. 요약까지 하면 회독하는데 오래 걸린다.
 	.
