Update content src/site/notes/distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차.md

--- a/src/site/notes/distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차.md
+++ b/src/site/notes/distribute/productivity system-생산성 시스템/노트 기록 체계화 시스템-목차.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/distribute/productivity-system/노트 기록 체계화 시스템-목차/","tags":["목차","배포","생산성/시스템"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/distribute/productivity-system//","tags":["목차","배포","생산성/시스템"],"noteIcon":""}
 ---
 
 ### 날짜 2023-11-07 12:34
@@ -41,15 +41,16 @@
 새로운 기록들과 기존의 기록들을 연결시켜보면서 "세컨드 브레인" 구축한다
 	
 영구노트를 보관하고 축적하면서 해당 내용/과목에 대한 세컨드 브레인을 구축한다
-
-- 내가 생각하는 "세컨드 브레인" 이란? 
-	(배우고 있는 내용을 하나의 "과목"이라고 비유)
-		
-	해당 과목에 대한 내용을(정보) 위와 같은 단계로 기록을 해나가면 "목차-기록"을 만들면서 해당 과목에 대한 전체적인 흐름/프로세스를 기록해본다. 
-		
-	대략적인 "목차-기록" 만들어 가면서 전체적인 흐름/프로세스를 암기하고 이해한다.
-		
-	그렇게 만들어진 "목차-기록"이 해당 과목에 대한 나만의 "세컨드브레인" 이면서 해당 과목에 대한 나만의 "책"이 만들어 진다.
+	
+> [!NOTE]
+> - 내가 생각하는 "세컨드 브레인" 이란? 
+> 	(배우고 있는 내용을 하나의 "과목"이라고 비유)
+> 		
+> 	해당 과목에 대한 내용을(정보) 위와 같은 단계로 기록을 해나가면 "목차-기록"을 만들면서 해당 과목에 대한 전체적인 흐름/프로세스를 기록해본다. 
+> 		
+> 	대략적인 "목차-기록" 만들어 가면서 전체적인 흐름/프로세스를 암기하고 이해한다.
+> 		
+> 	그렇게 만들어진 "목차-기록"이 해당 과목에 대한 나만의 "세컨드브레인" 이면서 해당 과목에 대한 나만의 "책"이 만들어 진다.
 
 
 ### ㅡ 2.
@@ -86,11 +87,16 @@
 따라서 
 <span style="background:rgba(240, 200, 0, 0.2)">@ "옵시디언-검색옵션-제목"단위로 검색을 한다</span> 
 <span style="background:rgba(240, 200, 0, 0.2)">@ "옵시디언-검색옵션-프로퍼티-aliases/별칭" 단위로 검색을 한다</span>
-	ㅡ
-	제목단위 + 별칭단위 중복해서 검색이 안 들어가기 때문에 각각 나눠서 진행
-		ㅡ
-		하지만 "태그"단위 + "제목"단위는 중복해서 검색 가능.
+
+> [!NOTE]
+> - 
+> 	제목단위 + 별칭단위 중복해서 검색이 안 들어가기 때문에 각각 나눠서 진행
+> 		ㅡ
+> 		하지만 "태그"단위 + "제목"단위는 중복해서 검색 가능.
+
 <span style="background:rgba(240, 200, 0, 0.2)">@ 따라서 좀 더 구체적으로 검색을 하고 싶을 땐 "태그단위" + "제목 or 별칭"단위로 동시 검색한다.</span>
+
+- 
 	ㅡ 참고기록 및 태그목록 확인 : [[distribute/productivity system-생산성 시스템/Content record folder/노트 기록 시스템 구축-옵시디언 태그\|노트 기록 시스템 구축-옵시디언 태그]]
 
 
