Update content src/site/notes/distribute/productivity system-생산성 시스템/생산성 시스템.md

--- a/src/site/notes/distribute/productivity system-생산성 시스템/생산성 시스템.md
+++ b/src/site/notes/distribute/productivity system-생산성 시스템/생산성 시스템.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/distribute/productivity-system/생산성 시스템/","noteIcon":""}
+{"dg-publish":true,"permalink":"/distribute/productivity-system//","noteIcon":""}
 ---
 
 ### 날짜 2023-11-14 13:52
@@ -14,8 +14,10 @@
 매일 진행되는 강의 내용, 과제 등등 혼자서 (여유롭게?) 공부를 하면서는 느끼지 못할 걱정-고민-생각들이 많이 들었다.
 	
 매일 하루 종일 강의를 듣고 과제를 하는데 조금씩 밀리기 시작했다. 밀리기 시작한 다양한 이유가 있겠지만 그중에서 나는 새로운 내용을 배우고-기록하고-관리하는 방법에 대한 생산성이 떨어진다는 느낌을 많이 받았다. 따라서 나는 시스템을 체계화할 필요성이 있다고 생각했다. 
-- 
-	(조금씩 밀려 후반에는 강의를 잘 따라가지 못한 부분은 아쉽지만 그럼에도 불구하고 이 캠프에 들어와 이런 압박감 속에 공부를 하면서 이런 생각을 하게 되었으니 캠프를 도전한 행동을 잘한 것 같다.)
+
+> [!NOTE]
+> - 
+> 	(조금씩 밀려 후반에는 강의를 잘 따라가지 못한 부분은 아쉽지만 그럼에도 불구하고 이 캠프에 들어와 이런 압박감 속에 공부를 하면서 이런 생각을 하게 되었으니 캠프를 도전한 행동을 잘한 것 같다.)
 
 
 ### 2. 
