Update 노트 기록 시스템 구축-옵시디언 태그.md

--- a/src/site/notes/distribute/productivity system-생산성 시스템/Content record folder/노트 기록 시스템 구축-옵시디언 태그.md
+++ b/src/site/notes/distribute/productivity system-생산성 시스템/Content record folder/노트 기록 시스템 구축-옵시디언 태그.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/distribute/productivity-system/content-record-folder//","tags":["옵시디언_제텔카스텐","생산성/시스템"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/distribute/productivity-system/content-record-folder/노트 기록 시스템 구축-옵시디언 태그/","tags":["옵시디언_제텔카스텐","생산성/시스템"],"noteIcon":""}
 ---
 
 ### 날짜 2023-11-07 11:51
