--- a/src/site/notes/distribute/productivity system-생산성 시스템/Content record folder/노트 기록 시스템-추가내용.md
+++ b/src/site/notes/distribute/productivity system-생산성 시스템/Content record folder/노트 기록 시스템-추가내용.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/distribute/productivity-system/content-record-folder/노트 기록 시스템-추가내용/","tags":["옵시디언_제텔카스텐"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/distribute/productivity-system/content-record-folder//","tags":["옵시디언_제텔카스텐"],"noteIcon":""}
 ---
 
 ### 날짜 2023-11-07 11:07
