Update content src/site/notes/distribute/Weekly note/Content record folder/2023-11-19-W3.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-11-19-W3.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-11-19-W3.md
@@ -59,3 +59,36 @@ html 대략적인 목차기록/세컨드브레인 구축 중
 	
 [[Part 1 - Web 소개-HTML-내용기록\|Part 1 - Web 소개-HTML-내용기록]]
 [[html-전체적인 키워드-분리-연결\|html-전체적인 키워드-분리-연결]]
+
+----
+---
+---
+# 2. 캠프-선배 개발자 세미나
+
+- [x] ==2023-11-21 화요일==
+	- [x] : 목표 끌어당김 후 시작
+- [x] ==2023-11-22 수요일==
+	- [x] : 목표 끌어당김 후 시작
+- [x] ==2023-11-23 목요일==
+	- [x] : 목표 끌어당김 후 시작
+
+
+
+- 
+- [x] ㅡ [[distribute/productivity system-생산성 시스템/배움-회독 시스템-목차\|배움-회독 시스템-목차]] / 내용 업데이트 진행
+	
+- [ ] ㅡ [[금융SW아카데미-커리큘럼-키워드\|금융SW아카데미-커리큘럼-키워드]] / 커리큘럼 분석 중
+	ㅡ [[유데미 강의기록-프로젝트 아이디어 기록\|유데미 강의기록-프로젝트 아이디어 기록]]
+	금융it개발 세미나을 통해 캠프 마지막에 금융산업/서비스에 대한 최종 프로젝트를 만들고 발표하는 시간이 존재.
+	.
+	이 최종 프로젝트를 얼마나 잘 만들고 발표하는지에 따라서 바로 채용연계가 되는지 결정됨.
+	중요.
+	.
+	미리 틈틈 시간 활용해서 입과 후 금융산업/서비스에 대한 최종프로젝트를 생각 중.
+	.
+	캠프 서비스 이용할 수 있을 때 최종프로젝트에 필요한, 관련성이 있는 영상 기록
+	
+ㅡ [[세미나-전체적인 내용기록\|세미나-전체적인 내용기록]]
+ㅡ [[세미나-전체적인 내용-키워드-수정\|세미나-전체적인 내용-키워드-수정]]
+- [x] 1~2섹션 1회독 진행 마무리 ㅇ
+@ **3~4부분은 1~2섹션 대략적 세컨드브레인 구축 후 진행**
