Update content src/site/notes/distribute/Weekly note/Content record folder/2023-11-19-W3.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-11-19-W3.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-11-19-W3.md
@@ -16,6 +16,12 @@
 	: 목표 끌어당김 후 시작
 
 
+- [x] ㅡ [[VS코드-목차-수정\|VS코드-목차-수정]] /내용 업데이트 진행 ㅇ 
+- [x] ㅡ [[distribute/CS지식_IT_개발용어/CS지식_IT_개발용어-목차-수정\|CS지식_IT_개발용어-목차-수정]] / 내용 업데이트 진행 ㅇ 
+
+---
+- **JS**
+
 ㅡ 자바스크립트 강의 시작
 	
 [[Part3-Javascript-내용기록\|Part3-Javascript-내용기록]]
@@ -34,7 +40,7 @@
 	리스트 관련 함수 내용 수정 중.
 
 ----
-- css
+- **css**
 
 
 ㅡ https://studiomeal.com/archives/197
@@ -47,6 +53,7 @@ css 내용 100% 이해를 위한 참고자료 정독 중
 - [x] ㅡ [[절대경로-상대경로\|절대경로-상대경로]]
 - [x] 기존 목차 / css선택자 내용 정리
 - [x] ㅡ [[distribute/VScode-비주얼 스튜디오 코드/Content record folder/VS-확장버튼-기능확장\|VS-확장버튼-기능확장]]
+- [x] [[Part2-CSS-내용기록\|Part2-CSS-내용기록]]
 
 
 
@@ -54,11 +61,22 @@ css 내용 100% 이해를 위한 참고자료 정독 중
 - **html**
 
 ㅡ
-html 대략적인 목차기록/세컨드브레인 구축 중
-	내용분리 /연결 중
+- [x] part 1 - html 끝까지 대략적 시청 마무리
+	[[Part 1 - Web 소개-HTML-내용기록\|Part 1 - Web 소개-HTML-내용기록]]
+	[[html-전체적인 키워드-분리-연결\|html-전체적인 키워드-분리-연결]]
 	
-[[Part 1 - Web 소개-HTML-내용기록\|Part 1 - Web 소개-HTML-내용기록]]
-[[html-전체적인 키워드-분리-연결\|html-전체적인 키워드-분리-연결]]
+- [ ] html 대략적인 목차기록/세컨드브레인 구축 중
+	- [x] ㅡ [[img요소-예시코드\|img요소-예시코드]]
+	- [x] ㅡ [[HTML-display속성-블록-인라인\|HTML-display속성-블록-인라인]]
+	- [x] ㅡ [[뷰포트위치-Viewport Position-마우스스크롤\|뷰포트위치-Viewport Position-마우스스크롤]]
+	- [x] ㅡ [[css-position속성-정적-고정-절대-상대위치\|css-position속성-정적-고정-절대-상대위치]]
+	- [x] ㅡ [[컴파일과정-바이트언어-기계어\|컴파일과정-바이트언어-기계어]]
+	- [x] [[meta태그-charset속성-문자 인코딩방식\|meta태그-charset속성-문자 인코딩방식]] / 연결
+	- [x] [[인코딩-디코딩-유니코드\|인코딩-디코딩-유니코드]] / 연결
+	- [x] [[이미지삽입-svg-img태그\|이미지삽입-svg-img태그]] / 연결
+	- [x] ㅡ [[MDN-웹표준기술서-개념서\|MDN-웹표준기술서-개념서]] / 연결
+	- [x] ㅡ [[✏️코드펜(CodePen)\|✏️코드펜(CodePen)]]/ 연걸
+	- [x] ㅡ [[html-레이아웃-semantic-태그\|html-레이아웃-semantic-태그]]/연결
 
 ----
 ---
