Update content src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md
@@ -24,3 +24,11 @@
 	- [x] [[Part 1 - Web 소개-HTML-내용기록\|Part 1 - Web 소개-HTML-내용기록]] / 전체적인 내용분리 
 	- [x] [[html-전체적인 키워드-분리-연결\|html-전체적인 키워드-분리-연결]] / 전체적인 키워드 분리 / 연결
 - [x] 배포
+
+
+### ㅡ DOM
+- 금요일/ 토요일
+ㅡ 
+- [ ] part4 시작
+	[[Part4-DOM-전체적인-내용기록\|Part4-DOM-전체적인-내용기록]]
+	[[Part4-DOM-전체적인-키워드\|Part4-DOM-전체적인-키워드]]
