Update content src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md
@@ -25,7 +25,18 @@
 	- [x] [[html-전체적인 키워드-분리-연결\|html-전체적인 키워드-분리-연결]] / 전체적인 키워드 분리 / 연결
 - [x] 배포
 
+-----
+### ㅡ CSS
+- 화요일 / 목요일 / 금요일
+- [x] https://studiomeal.com/archives/197
+	강의 css 100% 이해하기 위해 읽고 있는 참고자료.
+	해당 내용을 읽고 기록한다.
+- [x] 위 참고자료 참고노트화 기록 / 목차 연결
+	
+- [ ] css강의 강의 시청 / 전체적인 내용 기록 / 분리 / 연결 중
 
+
+-----
 ### ㅡ DOM
 - 금요일/ 토요일
 ㅡ 
