Update content src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md
@@ -35,6 +35,28 @@
 	
 - [ ] css강의 강의 시청 / 전체적인 내용 기록 / 분리 / 연결 중
 
+----
+### ㅡ JS
+- 월요일 / 화요일 / 수요일 / 목요일 / 금요일 / 토요일
+- [x] 15강 마무리
+- [x] 16강 마무리
+- [x] 17강 마무리
+- [x] 18강 마무리
+- [x] 19강 마무리 / JS 강의 처음~ 끝까지 마무리
+- [ ] ㅡ JS 전체적인 내용 분리 /목차 연결
+	[[JS-전체적인내용-키워드-수정\|JS-전체적인내용-키워드-수정]]
+	[[JS-내용-키워드\|JS-내용-키워드]]
+
+ㅡ
+JS는 html/css와 달리 프로그래밍 언어임. 따라서 JS를 공부하면서 파이썬 공부했던 기록들이 복습되고 연결됨
+	
+[[Python 파이썬-목차-수정\|Python 파이썬-목차-수정]]
+[[Python 파이썬-목차\|Python 파이썬-목차]]
+	
+- [x] [[distribute/Python 파이썬/Content record folder/람다표현식-익명함수\|람다표현식-익명함수]] / 요약 영구노트화
+- [x] [[for문-range()\|for문-range()]] / 밑줄-참고노트화
+- [x] [[조건문-if-elif-else\|조건문-if-elif-else]] / 내용 업데이트
+- [x] [[distribute/Python 파이썬/Content record folder/네임스페이스-내장변수-__name__-객체참조탐색순서-LEGB\|네임스페이스-내장변수-__name__-객체참조탐색순서-LEGB]] / 내용 업데이트
 
 -----
 ### ㅡ DOM
