Update content src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-11-26-W4.md
@@ -65,3 +65,28 @@ JS는 html/css와 달리 프로그래밍 언어임. 따라서 JS를 공부하면
 - [ ] part4 시작
 	[[Part4-DOM-전체적인-내용기록\|Part4-DOM-전체적인-내용기록]]
 	[[Part4-DOM-전체적인-키워드\|Part4-DOM-전체적인-키워드]]
+
+
+
+---
+----
+----
+# 2. 캠프-선배 개발자 세미나
+
+- [x] ==2023-11-28 화요일==
+	- [x] : 목표 끌어당김 후 시작
+
+
+ㅡ 화요일
+[[캠프-금융it개발자-특강-목차\|캠프-금융it개발자-특강-목차]]
+
+[[세미나-전체적인 내용기록\|세미나-전체적인 내용기록]]
+[[세미나-전체적인 내용-키워드-수정\|세미나-전체적인 내용-키워드-수정]]
+[[세미나-전체적인 내용-키워드\|세미나-전체적인 내용-키워드]]
+
+
+
+ㅡ 수요일
+금융sw아카데미 / 커리큘럼 분석 중
+[[금융SW아카데미-커리큘럼-키워드\|금융SW아카데미-커리큘럼-키워드]]
+[[유데미 강의기록-프로젝트 아이디어 기록\|유데미 강의기록-프로젝트 아이디어 기록]]
