Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
@@ -8,6 +8,15 @@
 ---
 # 1. HTML-CSS-JS-웹서비스
 
+- [x] ==2023-12-04 월요일==
+- [x] ==2023-12-05 화요일==
+- [x] ==2023-12-06 수요일==
+- [x] ==2023-12-07 목요일==
+- [x] ==2023-12-08 금요일==
+- [x] ==2023-12-09 토요일==
+	- [x] 목표 끌어당김 후 시작
+
+
 ### ㅡ HTML
 - 월요일
 - [x] ㅡ 지난 주 / 1번 과목 /  html 10분 / 기록 복기 / 배포
@@ -41,3 +50,16 @@
 
 
 ----
+### ㅡ part 5 이벤트
+- 토요일/ 일요일
+	
+ㅡ
+- [ ] 새로운 섹션 시청 중
+[[Part5-Event-전체적인내용-키워드\|Part5-Event-전체적인내용-키워드]]
+[[Part5-Event-전체적인 내용기록\|Part5-Event-전체적인 내용기록]]
+	
+ㅡ
+100% 이해를 위한 참고자료
+- [x] [[이벤트(event)용어-핸들러-리스너\|이벤트(event)용어-핸들러-리스너]] / 밑줄 참고노트화 / 내용업데이트
+
+
