Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
@@ -5,6 +5,17 @@
 ### 날짜 2023-12-04 10:46
 
 
+------
+ㅡ
+하루 10분 틈틈
+포맷을 위한
+노트북 바탕화면 / 파일 정리 
+- [x] 수요일
+- [ ] 목요일
+- [x] 금요일
+	
+- [x] ㅡ [[2022-4학년2학기-기구설계기초-B+-폴더\|2022-4학년2학기-기구설계기초-B+-폴더]] / 옵시디언 배포 / 깃허브 저장
+
 ---
 # 1. HTML-CSS-JS-웹서비스
 
