Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
@@ -4,6 +4,21 @@
 
 ### 날짜 2023-12-04 10:46
 
+# <데일리 기록> 
+- [x] ==2023-12-04 월요일==
+- [x] ==2023-12-05 화요일==
+- [x] ==2023-12-06 수요일==
+- [x] ==2023-12-07 목요일==
+
+-----
+- 토요일
+- [x] 새로운 한 주 시작 전 핵심목표-명확화 리스트 과목 추가 작성
+[[핵심목표-우선순위-명확화 리스트 작성\|핵심목표-우선순위-명확화 리스트 작성]] 
+	
+- [x] 새로운 한 주 시작전 바로 시작하기 위해 앞 부분만 조금 시청
+	-[[파이썬-실무기술-전체적인-내용기록\|파이썬-실무기술-전체적인-내용기록]]
+	
+- [x] [[서버-호스팅-배포-용어\|서버-호스팅-배포-용어]] / 내용 업데이트
 
 ------
 ㅡ
@@ -17,7 +32,7 @@
 - [x] ㅡ [[2022-4학년2학기-기구설계기초-B+-폴더\|2022-4학년2학기-기구설계기초-B+-폴더]] / 옵시디언 배포 / 깃허브 저장
 
 ---
-# 1. HTML-CSS-JS-웹서비스
+# <1. HTML-CSS-JS-웹서비스>
 
 - [x] ==2023-12-04 월요일==
 - [x] ==2023-12-05 화요일==
