--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
@@ -10,6 +10,10 @@
 - [x] ==2023-12-06 수요일==
 - [x] ==2023-12-07 목요일==
 
+----
+- [x] [[discpline-규칙-규율\|discpline-규칙-규율]] 내용 업데이트 /핸드폰 저장
+
+
 -----
 - 토요일
 - [x] 새로운 한 주 시작 전 핵심목표-명확화 리스트 과목 추가 작성
