Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
@@ -79,6 +79,16 @@
 - [x] [[css-position속성-정적-고정-절대-상대위치\|css-position속성-정적-고정-절대-상대위치]] / 밑줄 참고노트화
 
 
+
+-----
+### ㅡ part3-4 JS-DOM
+- dom-JS 월요일 / 화요일 / 수요일/ 목요일 / 금요일
+
+ㅡ 개념서
+- [x] ㅡ [[JS-DOM-객체출력-노드출력\|JS-DOM-객체출력-노드출력]] / 목차 연결
+- [x] [[HTMLCollection-NodeList-공통점-차이점\|HTMLCollection-NodeList-공통점-차이점]]
+- [x] [[노드접근방법-노드간관계이용-프로퍼티이용\|노드접근방법-노드간관계이용-프로퍼티이용]]
+
 ----
 ### ㅡ part 5 이벤트
 - 토요일/ 일요일
