--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
@@ -88,6 +88,12 @@
 - [x] ㅡ [[JS-DOM-객체출력-노드출력\|JS-DOM-객체출력-노드출력]] / 목차 연결
 - [x] [[HTMLCollection-NodeList-공통점-차이점\|HTMLCollection-NodeList-공통점-차이점]]
 - [x] [[노드접근방법-노드간관계이용-프로퍼티이용\|노드접근방법-노드간관계이용-프로퍼티이용]]
+- [x] [[노드종류-문서-요소-속성-텍스트-주석\|노드종류-문서-요소-속성-텍스트-주석]]
+- [x] [[DOM-노드의미-트리구조-이미지\|DOM-노드의미-트리구조-이미지]]
+- [x] [[노드관계-부모-자식-형제-조상-자손\|노드관계-부모-자식-형제-조상-자손]]
+- [x] [[JS-DOM이용한 html 작업(제어)예시\|JS-DOM이용한 html 작업(제어)예시]]
+- [x] [[DOM으로 인한 HTML문서-노드-계층구조-트리구조-예시코드\|DOM으로 인한 HTML문서-노드-계층구조-트리구조-예시코드]]
+
 
 ----
 ### ㅡ part 5 이벤트
