Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
@@ -93,6 +93,14 @@
 - [x] [[노드관계-부모-자식-형제-조상-자손\|노드관계-부모-자식-형제-조상-자손]]
 - [x] [[JS-DOM이용한 html 작업(제어)예시\|JS-DOM이용한 html 작업(제어)예시]]
 - [x] [[DOM으로 인한 HTML문서-노드-계층구조-트리구조-예시코드\|DOM으로 인한 HTML문서-노드-계층구조-트리구조-예시코드]]
+- [x] [[document객체-HTML요소선택-메서드\|document객체-HTML요소선택-메서드]]
+- [x] [[JS-document.getElementsByTagName(태그이름)\|JS-document.getElementsByTagName(태그이름)]]
+- [x] [[JS-document.getElementById(아이디)\|JS-document.getElementById(아이디)]]
+- [x] [[JS-document.getElementsByClassName(클래스이름)\|JS-document.getElementsByClassName(클래스이름)]]
+- [x] [[JS-document.getElementsByName(name속성값)\|JS-document.getElementsByName(name속성값)]]
+- [x] [[JS-document.querySelectorAll(선택자)\|JS-document.querySelectorAll(선택자)]]
+- [x] [[JS-html요소-이벤트핸들러-추가방법\|JS-html요소-이벤트핸들러-추가방법]]
+- [x] [[JS-HTML객체집합-선택방법\|JS-HTML객체집합-선택방법]]
 
 
 ----
