Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-03-W1.md
@@ -35,6 +35,9 @@
 	
 - [x] ㅡ [[2022-4학년2학기-기구설계기초-B+-폴더\|2022-4학년2학기-기구설계기초-B+-폴더]] / 옵시디언 배포 / 깃허브 저장
 
+
+----
+-----
 ---
 # <1. HTML-CSS-JS-웹서비스>
 
@@ -116,4 +119,43 @@
 100% 이해를 위한 참고자료
 - [x] [[이벤트(event)용어-핸들러-리스너\|이벤트(event)용어-핸들러-리스너]] / 밑줄 참고노트화 / 내용업데이트
 
+
+
+------
+---
+---
+# <4. 파이썬 크롬 게임 개발 미니 프로젝트>
+
+- [x] ==2023-12-04 월요일==
+	- [x] : 목표 끌어당김 후 시작
+- [x] ==2023-12-05 화요일==
+	- [x] : 목표 끌어당김 후 시작
+- [x] ==2023-12-06 수요일==
+	- [x] : 목표 끌어당김 후 시작
+
+- 월요일 / 화요일 / 수요일 
+ㅡ
+- [x] 54강 2회독 진행 
+- [ ] 55강 2회독 진행
+	[[파이썬 크롬 공룡 게임-미니프로젝트-코드설명1\|파이썬 크롬 공룡 게임-미니프로젝트-코드설명1]]
+	
+- [x] ㅡ [[프로젝트 폴더-명명규칙-디렉토리 구조\|프로젝트 폴더-명명규칙-디렉토리 구조]]
+- [x] ㅡ [[distribute/Python-Chrome Dinosaur Game-Project/Content record folder/파이썬 크롬 프로그램 코드를 작성하면서 느낀 점\|파이썬 크롬 프로그램 코드를 작성하면서 느낀 점]]
+- [x] ㅡ [[distribute/Python-Chrome Dinosaur Game-Project/Content record folder/게임 배경 이동상황-이해\|게임 배경 이동상황-이해]]
+- [x] ㅡ [[distribute/Python-Chrome Dinosaur Game-Project/Content record folder/코드-pygame-os-random모듈\|코드-pygame-os-random모듈]] 밑줄 요약 ㅇ
+	- [x] 키워드 문장 업데이트 필요
+- [x] [[크롬 공룡게임 constants.py-코드설명1\|크롬 공룡게임 constants.py-코드설명1]]
+- [x] [[Python 파이썬-목차-수정\|Python 파이썬-목차-수정]] / 내용 업데이트 진행
+- [x] [[distribute/Python 파이썬/Content record folder/파이썬-cmd-명령코드\|파이썬-cmd-명령코드]] / 내용 업데이트
+- [x] [[os.path.abspath()-코드구조-모듈간 기능조합-기능확장\|os.path.abspath()-코드구조-모듈간 기능조합-기능확장]] / 밑출 참고노트화
+- [x] [[모듈간 기능확장-예시코드\|모듈간 기능확장-예시코드]] / 키워드-참고노트화
+- [x] [[pygame.font.Font()-라이브러리-모듈-클래스-코드구조\|pygame.font.Font()-라이브러리-모듈-클래스-코드구조]] / 내용분리 / 목차연결
+- [x] [[모듈.모듈.함수()-코드구조\|모듈.모듈.함수()-코드구조]] / 내용분리 / 목차연결
+- [x] [[클래스.클래스.메서드()-코드구조-Any클래스\|클래스.클래스.메서드()-코드구조-Any클래스]] / 내용분리 / 목차연결
+- [x] [[SQLAlchemy-`db.session'-코드구조-클래스연결\|SQLAlchemy-`db.session'-코드구조-클래스연결]] / 목차연결
+- [x] [[tk.TK()-tk.Tk-코드구조-클래스-직접참조\|tk.TK()-tk.Tk-코드구조-클래스-직접참조]] / 내용분리
+	
+ㅡ
+아나콘다
+- [x] [[파이썬-가상환경-구축이유\|파이썬-가상환경-구축이유]] / 내용 업데이트
 
