Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-24-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-24-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-24-W4.md
@@ -33,6 +33,9 @@
 - [x] [[CSS-cursor속성-마우스커서-형태\|CSS-cursor속성-마우스커서-형태]] / 목차연결
 - [x] [[form태그-html입력폼-내부태그들\|form태그-html입력폼-내부태그들]] / 내용업데이트
 - [x] [[확장프로그램(Extension)-플러그인(Plugin)-용어\|확장프로그램(Extension)-플러그인(Plugin)-용어]] / 목차연결
+	
+- [ ] CSS 마지막 실습 강의 진행 중 / 대략적인 세컨드브레인 구축 / 전체적인 내용분리-연결 중
+	- [ ] 마지막 부분 / 예상치 못한 에러 발생 / 상황기록-해결과정 기록 
 
 ------
 ---
