Update content src/site/notes/distribute/Weekly note/2024-01-01-W1.md

--- a/src/site/notes/distribute/Weekly note/2024-01-01-W1.md
+++ b/src/site/notes/distribute/Weekly note/2024-01-01-W1.md
@@ -6,6 +6,9 @@
 
 # <데일리 기록> 
 
+- ##### 2024-01-08 월요일
+- ![SmartSelect_20240109_114020_Time It.jpg|250](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240109_114020_Time%20It.jpg)
+		![SmartSelect_20240109_112639_Time It.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240109_112639_Time%20It.jpg)
 
 
 
@@ -27,3 +30,6 @@
 ------
 ---
 ---
+# ㅡ 2. HTML-CSS-JS-웹서비스
+
+### ㅡ CSS
