Update content src/site/notes/distribute/Weekly note/2024-01-01-W1.md

--- a/src/site/notes/distribute/Weekly note/2024-01-01-W1.md
+++ b/src/site/notes/distribute/Weekly note/2024-01-01-W1.md
@@ -33,3 +33,9 @@
 # ㅡ 2. HTML-CSS-JS-웹서비스
 
 ### ㅡ CSS
+- [x] [[웹-폰트스타일-분석-WhatFont\|웹-폰트스타일-분석-WhatFont]] / 목차연결
+- [x] [[웹폰트-패밀리-스타일-의미\|웹폰트-패밀리-스타일-의미]] / 목차연결
+- [x] [[배경-폰트-보색-색조합\|배경-폰트-보색-색조합]] / 목차연결
+- [x] [[유튜브-헤더영역구조-보라색박스-flex표시\|유튜브-헤더영역구조-보라색박스-flex표시]] 목차연결
+- [x] [[flex-justify-content속성\|flex-justify-content속성]] / 내용복습
+
