Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-01-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-01-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-01-W1.md
@@ -27,6 +27,8 @@
 ---
 ---
 # ㅡ 2. HTML-CSS-JS-웹서비스
+- 참고기록 =>
+	- [[HTML-CSS-JS-웹서비스-목차\|HTML-CSS-JS-웹서비스-목차]]
 
 ### ㅡ CSS
 - [x] 실습강의-전체적인 내용기록 / 전체적인 내용 요약정리 
