--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
@@ -11,6 +11,11 @@
 		![SmartSelect_20240109_112639_Time It.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240109_112639_Time%20It.jpg)
 
 
+- ##### 2024-01-10 수요일
+	- ![SmartSelect_20240111_134413_Time It.jpg|250](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240111_134413_Time%20It.jpg)
+		- ![SmartSelect_20240111_134302_Time It.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240111_134302_Time%20It.jpg)
+
+
 
 ----
 -----
