Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
@@ -24,7 +24,11 @@
 
 
 ### ㅡ Python
-
+- [x] [[매개변수 2가지 역할-변수-기본기능조절\|매개변수 2가지 역할-변수-기본기능조절]] / 내용복기
+- [x] [[cmd-특정파일위치-바로실행\|cmd-특정파일위치-바로실행]] / 목차연결
+- [x] [[시스템환경변수-이유-목적\|시스템환경변수-이유-목적]] / 내용업데이트
+- [x] [[distribute/Python 파이썬/Content record folder/파이썬-cmd-명령코드\|파이썬-cmd-명령코드]] / 내용업데이트
+- [x] [[반응형-대화형-프로그램 용어\|반응형-대화형-프로그램 용어]] / 내용업데이트/ 목차연결
 
 ------
 ---
