--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
@@ -23,12 +23,37 @@
 # ㅡ 1. 파이썬-부트캠프-언어-미니프로젝트-실무기술
 
 
+- 진도 =>
+- [x] 월요일 10분
+	- [x] 문제풀이 10분/복기 10분
+	- [x] 진도 10분
+- [x] 화요일 10분
+	- [x] 내용복기 10분
+	- [x] 진도 10분
+- [x] 수요일 10분
+	- [x] 전날 내용복기 10분
+	- [x] 새로운 진도 10분 
+- [x] 목요일 10분
+	- [x] 진도 10분
+	- [x] 전날 복기 10분
+- [x] 금요일 10분
+	- [x] 전날 내용 복기 10분
+	- [x] 진도 10분
+- [x] 토요일 10분
+	- [x] 전날 내용 복기 10분
+	- [x] 진도 10분
+- [x] 일요일 10분 
+	- [x] 전날 내용 복기 10분
+	- [x] 진도 10분
+
 ### ㅡ Python
 - [x] [[매개변수 2가지 역할-변수-기본기능조절\|매개변수 2가지 역할-변수-기본기능조절]] / 내용복기
 - [x] [[cmd-특정파일위치-바로실행\|cmd-특정파일위치-바로실행]] / 목차연결
 - [x] [[시스템환경변수-이유-목적\|시스템환경변수-이유-목적]] / 내용업데이트
 - [x] [[distribute/Python 파이썬/Content record folder/파이썬-cmd-명령코드\|파이썬-cmd-명령코드]] / 내용업데이트
 - [x] [[반응형-대화형-프로그램 용어\|반응형-대화형-프로그램 용어]] / 내용업데이트/ 목차연결
+- [x] [[클래스 정의-연습문제\|클래스 정의-연습문제]] / 목차연결
+- [x] [[디자인패턴-용어-작성규칙-템플릿\|디자인패턴-용어-작성규칙-템플릿]] / 목차연결
 
 ------
 ---
