Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
@@ -61,3 +61,8 @@
 # ㅡ 2. HTML-CSS-JS-웹서비스
 
 ### ㅡ CSS
+- [x] [[CSS-전체-직접-태그-id-class-그룹-선택자\|CSS-전체-직접-태그-id-class-그룹-선택자]] / 내용복기 / 업데이트
+- [x] [[CSS-직계-자식선택자\|CSS-직계-자식선택자]] / 내용복기
+- [x] [[브라우저-기본스타일시트-user agent stylesheet\|브라우저-기본스타일시트-user agent stylesheet]] / 내용복기 / 업데이트
+- [x] [[CSS-background-color속성-요소배경색\|CSS-background-color속성-요소배경색]] / 목차연결
+- [x] [[CSS-min-width속성\|CSS-min-width속성]] / 목차연결
