Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
@@ -66,3 +66,25 @@
 - [x] [[브라우저-기본스타일시트-user agent stylesheet\|브라우저-기본스타일시트-user agent stylesheet]] / 내용복기 / 업데이트
 - [x] [[CSS-background-color속성-요소배경색\|CSS-background-color속성-요소배경색]] / 목차연결
 - [x] [[CSS-min-width속성\|CSS-min-width속성]] / 목차연결
+
+
+
+----
+---
+----
+###  ㅡ 단순 명확화 행동 1번
+
+- 진도 =>
+- [x] 2024-01-08 월요일 10분
+- [x] 2024-01-9 화요일 10분
+- [x] 2024-01-11 목요일 10분
+- [x] 2024-01-12 금요일 10분
+- [x] 2024-01-13 토요일 10분
+- [x] 2024-01-14 일요일 10분
+
+##### ㅡ
+
+-  =>
+- [ ] 캠프 영상 저장 중
+리액트 강의
+api 강의
