Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
@@ -6,10 +6,14 @@
 
 # <데일리 기록> 
 
-- 2024-01-15 월요일
+##### - 2024-01-15 월요일
 - ![SmartSelect_20240116_134040_Time It.jpg|250](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240116_134040_Time%20It.jpg)
 - ![SmartSelect_20240116_134216_Time It.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240116_134216_Time%20It.jpg)
 
+##### - 2024-01-17 수요일
+- 
+	![SmartSelect_20240118_142456_Time It.jpg|250](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240118_142456_Time%20It.jpg)
+	![SmartSelect_20240118_142341_Time It.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240118_142341_Time%20It.jpg)
 
 ----
 -----
