Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
@@ -54,6 +54,8 @@
 - [x] [[반응형-대화형-프로그램 용어\|반응형-대화형-프로그램 용어]] / 내용업데이트/ 목차연결
 - [x] [[클래스 정의-연습문제\|클래스 정의-연습문제]] / 목차연결
 - [x] [[디자인패턴-용어-작성규칙-템플릿\|디자인패턴-용어-작성규칙-템플릿]] / 목차연결
+- [x] [[JVM-용어-프로그램-가상공간\|JVM-용어-프로그램-가상공간]] 목차연결
+- [x] [[구성요소기반-아키텍처-용어\|구성요소기반-아키텍처-용어]] / 목차연결
 
 ------
 ---
