Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md
@@ -23,3 +23,25 @@
 - [x] 포맷폴더에 따로 저장
 
 ----
+# <1. HTML-CSS-JS-웹서비스>
+
+
+### ㅡ CSS
+- css 일요일 / 월요일 / 수요일 / 목요일
+	
+- [x] gtp 내용정리 
+- [x] [[CSS-border-radius-테두리속성\|CSS-border-radius-테두리속성]]
+- [x] [[가상요소-가상선택자-차이점\|가상요소-가상선택자-차이점]] 
+- [x] [[flex-(단)축약속성\|flex-(단)축약속성]] / 밑줄요약 ㅇ
+- [x] [[CSS-박스모델-content-패딩-border-마진-이미지\|CSS-박스모델-content-패딩-border-마진-이미지]] / 내용 업데이트
+- [x] [[크롬-CSS확인방법-환경설정-왓폰트\|크롬-CSS확인방법-환경설정-왓폰트]] / 목차연결
+- [x] [[메뉴스타일-햄버거아이콘-토글기능-반응형\|메뉴스타일-햄버거아이콘-토글기능-반응형]]  / 키워드 참고노트 / 목차연결 필요
+
+
+
+---
+# <파이썬-부트캠프-언어-미니프로젝트-실무기술>
+
+
+### ㅡ Python
+- [x] [[가상환경-주피터노트북-커널-연결\|가상환경-주피터노트북-커널-연결]] / 목차연결
