Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
@@ -20,6 +20,15 @@
 ---
 # ㅡ 1. 파이썬-부트캠프-언어-미니프로젝트-실무기술
 
+- 진도 =>
+- [x] 월요일 10분
+- [x] 화요일 10분
+- [ ] 수요일 10분
+- [x] 목요일 10분
+- [x] 금요일 10분
+- [ ] 토요일 10분
+- [x] 2024-01-21 일요일 10분
+
 
 
 
