Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
@@ -6,15 +6,19 @@
 
 # <데일리 기록> 
 
+##### - 2024-01-23 화요일
+- ![SmartSelect_20240124_111127_Time It.jpg|250](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240124_111127_Time%20It.jpg)
+- ![tempFileForShare_20240124-111307.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/tempFileForShare_20240124-111307.jpg)
 
 
 ----
 -----
 ---
+# ㅡ 1. 파이썬-부트캠프-언어-미니프로젝트-실무기술
 
 
 
-------
 ---
----
+# ㅡ 3. 금융SW아카데미 정보 구축
+
 
