Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
@@ -11,6 +11,11 @@
 - ![tempFileForShare_20240124-111307.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/tempFileForShare_20240124-111307.jpg)
 
 
+##### - 2024-01-24 수요일
+- ![SmartSelect_20240125_114558_Time It.jpg|250](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240125_114558_Time%20It.jpg)
+- ![SmartSelect_20240125_114623_Time It.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240125_114623_Time%20It.jpg)
+
+
 ----
 -----
 ---
