Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
@@ -33,6 +33,31 @@
 - [x] [[프로그램단위-용어-모듈-컴포넌트\|프로그램단위-용어-모듈-컴포넌트]] / 목차연결
 
 ------
----
----
+
+
 # ㅡ 2. HTML-CSS-JS-웹서비스
+
+-----------
+# ㅡ 3. 금융SW아카데미 정보 구축
+- 금융SW아카데미 정보 구축
+- 참고자료
+	- [[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 3. 금융SW아카데미 정보 구축\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 3. 금융SW아카데미 정보 구축]]
+	- 단순 명확화 행동 1번
+
+
+
+-  =>
+ㅡ
+- [x] 수요일 지원서 작성 제출
+	
+ㅡ
+목요일 오전 금융sw아카데미에 전화옴
+스팸전화인줄 처음에 받지 않았음
+주의 필요.
+- [x] 번호 등록
+	
+ㅡ
+- [x] 메일 확인 /인성검사 바로 진행
+- [x] 사람인 인성검사 실시
+	- [x] 첨부 문서 확인
+- [x] 인성검사 결과 pdf 저장 후 결과지 발송
