Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
@@ -39,24 +39,23 @@
 
 -----------
 # ㅡ 3. 금융SW아카데미 정보 구축
-- 금융SW아카데미 정보 구축
-- 참고자료
+
+- ㅡ 금융SW아카데미 정보 구축
+- ㅡ 참고자료
 	- [[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 3. 금융SW아카데미 정보 구축\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 3. 금융SW아카데미 정보 구축]]
 	- 단순 명확화 행동 1번
 
 
-
--  =>
-ㅡ
+##### ㅡ
 - [x] 수요일 지원서 작성 제출
 	
-ㅡ
+##### ㅡ
 목요일 오전 금융sw아카데미에 전화옴
 스팸전화인줄 처음에 받지 않았음
 주의 필요.
 - [x] 번호 등록
 	
-ㅡ
+##### ㅡ
 - [x] 메일 확인 /인성검사 바로 진행
 - [x] 사람인 인성검사 실시
 	- [x] 첨부 문서 확인
