Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
@@ -47,8 +47,18 @@
 
 
 ##### ㅡ
-- [x] 수요일 지원서 작성 제출
+- [ ] **@ 금융SW아카데미 정보 구축**
 	
+- [x] 폴더생성 + 브레인 생성
+	-[[신한-금융SW아카데미-목차\|신한-금융SW아카데미-목차]]
+
+##### ㅡ
+- [x] [[캠프-회고록\|캠프-회고록]] / 내용 수정 / 배포
+- [x] [[현재 추구하는 진로-삶에 대한 가치관-기록\|현재 추구하는 진로-삶에 대한 가치관-기록]] / 내용 수정 / 배포
+	-[[AI + 웹 개발 취업캠프-목차-수정\|AI + 웹 개발 취업캠프-목차-수정]]
+	
+- [x] 수요일 지원서 작성 제출
+
 ##### ㅡ
 목요일 오전 금융sw아카데미에 전화옴
 스팸전화인줄 처음에 받지 않았음
