Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
@@ -25,5 +25,50 @@
 
 ---
 # ㅡ 3. 금융SW아카데미 정보 구축
+- 금융SW아카데미 정보 구축
+- 참고자료
+	- [[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 3. 금융SW아카데미 정보 구축\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 3. 금융SW아카데미 정보 구축]]
+	- 단순 명확화 행동 1번
+
+
+
+##### ㅡ
+- [x] 명확화 리스트 추가
+	[[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 코멘토/AWS\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 코멘토/AWS]]
+- [x] aws 자료 저장
+- [x] 옵시디언 폴더 생성 
+- [x] 바탕화면 폴더생성
+- [x] 목차 브레인 생성
+
+
+##### ㅡ
+- [x] 데이터베이스 명확화 리스트 기록
+	-[[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 생활코딩-유데미-데이터베이스\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 생활코딩-유데미-데이터베이스]]
+	
+- [x] 틈틈 시간 활용 데이터베이스 자료 저장
+- [x] 옵시디언 폴더생성
+- [x] 바탕화면 폴더생성
+- [x] 목차 - 세컨드브레인 생성
+	
+- [x] [[데이터베이스-기본개념-용어\|데이터베이스-기본개념-용어]] / 목차연결
+- [x] [[JDBC(API)-용어\|JDBC(API)-용어]] / 목차연결
+
+
+##### ㅡ
+- [x] 리액트 명확화 리스트 기록
+	[[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 프론트엔드 개발역량-React\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 프론트엔드 개발역량-React]]
+- [x] 리액트 1 자료 저장 
+- [x] 옵시디언 폴더생성
+- [x] 바탕화면 폴더생성
+- [x] 목차 - 세컨드브레인 생성
+
+
+
+##### ㅡ
+- [x] 리액트2 명확화 리스트 기록
+- [x] 리액트 2 자료 저장
+- [x] 옵시디언 폴더생성
+- [x] 바탕화면 폴더생성
+- [x] 목차 - 세컨드브레인생성
 
 
