Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
@@ -15,6 +15,13 @@
 - ![SmartSelect_20240125_114558_Time It.jpg|250](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240125_114558_Time%20It.jpg)
 - ![SmartSelect_20240125_114623_Time It.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240125_114623_Time%20It.jpg)
 
+##### - 2024-01-27/28 토-일요일
+- ![SmartSelect_20240129_121702_Time It.jpg|250](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240129_121702_Time%20It.jpg)
+- ![SmartSelect_20240129_121748_Time It.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240129_121748_Time%20It.jpg)
+- ![SmartSelect_20240129_121717_Time It.jpg|250](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240129_121717_Time%20It.jpg)
+- ![SmartSelect_20240129_121815_Time It.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240129_121815_Time%20It.jpg)
+
+
 
 ----
 -----
@@ -26,11 +33,42 @@
 ---
 # ㅡ 3. 금융SW아카데미 정보 구축
 - 금융SW아카데미 정보 구축
+	
 - 참고자료
 	- [[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 3. 금융SW아카데미 정보 구축\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 3. 금융SW아카데미 정보 구축]]
 	- 단순 명확화 행동 1번
+	
+###  ㅡ 단순 명확화 행동 1번
+- 핵심목표 우선순위 리스트 / 2024 리스트로 업데이트 진행
+- 캠프 자료/영상 저장/기록
+	
+- 참고기록
+	- [[핵심목표-우선순위-명확화 리스트 작성\|핵심목표-우선순위-명확화 리스트 작성]]
+	- [[2024년-핵심목표-우선순위-명확화 리스트\|2024년-핵심목표-우선순위-명확화 리스트]]
 
 
+- [ ] 10분 체크리스트 =>
+- [x] 2024-01-22 월요일 10분
+- [x] 2024-01-23 화요일  10분
+- [x] 2024-01-24 수요일 10분
+- [x] 2024-01-25 목요일 10분 
+- [x] 2024-01-26 금요일 10분
+- [x] 2024-01-27 토요일 10분
+- [x] 2024-01-28 일요일 10분
+
+
+##### ㅡ
+- [ ] 금융sw아카데미 커리큘럼 분석 중
+	[[노트기록시스템-옵시디언 태그-이미지\|노트기록시스템-옵시디언 태그-이미지]]
+	
+- [x] 데이터베이스 과목 세부 커리큘럼 분석
+- [x] 데이터베이스 기술/과목 / 대략적인 브레인 구축 / 자료저장
+
+
+##### ㅡ
+- [x] 2024-01-25 목요일 안내문자 확인
+- [x] 지난주 지원서 작성 완료 / 한번 더 확인 진행
+- [x] 내일배움카드 유효기간 확인
 
 ##### ㅡ
 - [x] 명확화 리스트 추가
@@ -71,4 +109,8 @@
 - [x] 바탕화면 폴더생성
 - [x] 목차 - 세컨드브레인생성
 
+
+##### ㅡ
+- [ ] 자료 정리 중
+	[[2024년-핵심목표-우선순위-명확화 리스트#ㅡ AI 역량강화 + 웹 개발 취업캠프 정보정리-구축\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ AI 역량강화 + 웹 개발 취업캠프 정보정리-구축]]
 
