Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
@@ -29,6 +29,12 @@
 # ㅡ 1. 파이썬-부트캠프-언어-미니프로젝트-실무기술
 
 
+### ㅡ Python
+##### ㅡ
+진도강의
+- [ ] 섹션 12 데코레이터 진도 시청-마무리
+- [ ] 데코레이터 기존 기록 복기 / 업데이트
+
 
 ---
 # ㅡ 3. 금융SW아카데미 정보 구축
