Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
@@ -30,10 +30,17 @@
 
 
 ### ㅡ Python
+- [x] [[HTTP주소-프로토콜-용어\|HTTP주소-프로토콜-용어]] / 목차연결
+- [x] [[의존성-용어\|의존성-용어]] / 목차연결
+- [x] [[아나콘다-의존성문제\|아나콘다-의존성문제]] / 목차연결
+- [x] [[distribute/Python 파이썬/Content record folder/파이썬-cmd-명령코드\|파이썬-cmd-명령코드]] / 내용복기 / 업데이트
+- [x] [[MDN-웹표준기술서-개념서\|MDN-웹표준기술서-개념서]] / 내용복기 내용업데이트
+
 ##### ㅡ
 진도강의
 - [ ] 섹션 12 데코레이터 진도 시청-마무리
 - [ ] 데코레이터 기존 기록 복기 / 업데이트
+
 
 
 ---
