Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
@@ -35,6 +35,10 @@
 - [x] [[아나콘다-의존성문제\|아나콘다-의존성문제]] / 목차연결
 - [x] [[distribute/Python 파이썬/Content record folder/파이썬-cmd-명령코드\|파이썬-cmd-명령코드]] / 내용복기 / 업데이트
 - [x] [[MDN-웹표준기술서-개념서\|MDN-웹표준기술서-개념서]] / 내용복기 내용업데이트
+- [x] [[인코딩-디코딩-유니코드\|인코딩-디코딩-유니코드]] / 내용복기
+- [x] [[파싱-용어-데이터분석과정\|파싱-용어-데이터분석과정]] / 목차연결
+- [x] [[API-용어-데이터교환코드\|API-용어-데이터교환코드]] / 목차연결
+
 
 ##### ㅡ
 진도강의
@@ -58,16 +62,6 @@
 - 참고기록
 	- [[핵심목표-우선순위-명확화 리스트 작성\|핵심목표-우선순위-명확화 리스트 작성]]
 	- [[2024년-핵심목표-우선순위-명확화 리스트\|2024년-핵심목표-우선순위-명확화 리스트]]
-
-
-- [ ] 10분 체크리스트 =>
-- [x] 2024-01-22 월요일 10분
-- [x] 2024-01-23 화요일  10분
-- [x] 2024-01-24 수요일 10분
-- [x] 2024-01-25 목요일 10분 
-- [x] 2024-01-26 금요일 10분
-- [x] 2024-01-27 토요일 10분
-- [x] 2024-01-28 일요일 10분
 
 
 ##### ㅡ
