Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-24-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-24-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-24-W4.md
@@ -6,6 +6,8 @@
 
 # <데일리 기록> 
 
+ㅡ
+- [x] 어머니 선물? 구매
 
 
 
@@ -42,3 +44,7 @@
 ---
 # <4. 파이썬 크롬 게임 개발 미니 프로젝트>
 
+
+### ㅡ Python
+- [x] [[이터레이터-iterator타입-이터러블-Iterable특징\|이터레이터-iterator타입-이터러블-Iterable특징]] / 밑줄 참고노트화
+- [x] [[이터레이터-iterator타입-이터러블-Iterable특징\|이터레이터-iterator타입-이터러블-Iterable특징]] / 내용 업데이트
