Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md
@@ -31,16 +31,6 @@
 
 
 ##### ㅡ
-- [x] 피그마 명확화 리스트 추가
-	-[[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 피그마\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 피그마]]
-	
-- [x] 자료 저장
-- [x] 옵시디언 폴더 생성
-- [x] 바탕화면 폴더 생성
-- [x] 목차 / 세컨드브레인 구축
-
-
-##### ㅡ
 - [x] 깃/깃허브 명확화 리스트 추가
 	[[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 깃-깃허브\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 깃-깃허브]]
 	
@@ -67,3 +57,22 @@
 - [x] 옵시디언 폴더생성
 - [x] 바탕화면 폴더생성
 - [x] 목차-세컨드브레인 생성
+
+
+##### ㅡ
+- [x]  OpenAI API 명확화 리스트 추가
+	[[2024년-핵심목표-우선순위-명확화 리스트#ㅡ OpenAI API\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ OpenAI API]]]
+	
+- [x] 자료 저장
+- [x] 옵시디언 폴더생성
+- [x] 바탕화면폴더생성
+- [x] 목차 - 브레인 생성
+
+##### ㅡ
+- [x] 피그마 명확화 리스트 추가
+	-[[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 피그마\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 피그마]]
+	
+- [x] 자료 저장
+- [x] 옵시디언 폴더 생성
+- [x] 바탕화면 폴더 생성
+- [x] 목차 / 세컨드브레인 구축
