--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
@@ -23,29 +23,6 @@
 # ㅡ 1. 파이썬-부트캠프-언어-미니프로젝트-실무기술
 
 
-- 진도 =>
-- [x] 월요일 10분
-	- [x] 문제풀이 10분/복기 10분
-	- [x] 진도 10분
-- [x] 화요일 10분
-	- [x] 내용복기 10분
-	- [x] 진도 10분
-- [x] 수요일 10분
-	- [x] 전날 내용복기 10분
-	- [x] 새로운 진도 10분 
-- [x] 목요일 10분
-	- [x] 진도 10분
-	- [x] 전날 복기 10분
-- [x] 금요일 10분
-	- [x] 전날 내용 복기 10분
-	- [x] 진도 10분
-- [x] 토요일 10분
-	- [x] 전날 내용 복기 10분
-	- [x] 진도 10분
-- [x] 일요일 10분 
-	- [x] 전날 내용 복기 10분
-	- [x] 진도 10분
-
 ### ㅡ Python
 - [x] [[매개변수 2가지 역할-변수-기본기능조절\|매개변수 2가지 역할-변수-기본기능조절]] / 내용복기
 - [x] [[cmd-특정파일위치-바로실행\|cmd-특정파일위치-바로실행]] / 목차연결
@@ -56,6 +33,8 @@
 - [x] [[디자인패턴-용어-작성규칙-템플릿\|디자인패턴-용어-작성규칙-템플릿]] / 목차연결
 - [x] [[JVM-용어-프로그램-가상공간\|JVM-용어-프로그램-가상공간]] 목차연결
 - [x] [[구성요소기반-아키텍처-용어\|구성요소기반-아키텍처-용어]] / 목차연결
+- [x] [[실행시간-런타임시간-실행환경-의미\|실행시간-런타임시간-실행환경-의미]] / 목차연결
+
 
 ------
 ---
