Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md
@@ -76,3 +76,21 @@
 - [x] 옵시디언 폴더 생성
 - [x] 바탕화면 폴더 생성
 - [x] 목차 / 세컨드브레인 구축
+
+----
+# ㅡ 프론트엔드 개발역량-React
+
+- 참고자료
+	- [[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 3. 프론트엔드 개발역량-React\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 3. 프론트엔드 개발역량-React]]
+	- [[리액트-대략적기록\|리액트-대략적기록]]
+
+##### ㅡ
+- [x] 4. 2-1. Hello World / 1회독
+- [x] 6. 2-2. 변수와 상수 / 1회독
+- [x] 2-3. 자료형과 형 변환  / 1회독
+- [x] 2-4. 연산자 / 1회독
+- [x] 2-5. 조건문 / 1회독
+- [x] 2-6. 함수 / 1회독
+##### ㅡ
+- [x] [[실행시간-런타임시간-실행환경-의미\|실행시간-런타임시간-실행환경-의미]] / 내용복기  업데이트
+
